# debug-container

./: Dockerfile  README.md
.github/workflows/: docker-publish.yml
software/c/: CMakeLists.txt  get-root.c
